FIX: Remove height styling to align with other sidebars

--- a/assets/stylesheets/common.scss
+++ b/assets/stylesheets/common.scss
@@ -1,10 +1,5 @@
 .discourse-docs-sidebar-panel {
   .sidebar-section-link-wrapper {
-    .sidebar-section-link {
-      height: auto;
-      margin-bottom: 0.5em;
-    }
-
     .sidebar-section-link-content-text {
       display: -webkit-box;
       -webkit-line-clamp: 3;
